<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#78909C"
    android:gravity="top"
    android:padding="15dp">
    <EditText
        android:id="@+id/edititem"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/addItem"
        android:padding="6dp"
        android:background="#ffffff"
        android:textColor="#000000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/editPrice"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:hint="@string/price_input"
            android:padding="6dp"
            android:inputType="numberDecimal"
            android:background="#ffffff"
            android:textColor="#000000" />
        <ImageView
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageTL"
            android:background="#fff"
            android:src="@drawable/turklirasi"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/addItem"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_buton"
            android:text="@string/add" />

        <Button
            android:id="@+id/close_popup"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_buton"
            android:text="@string/close" />
    </LinearLayout>
</LinearLayout>
