<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:padding="10dp"
            android:id="@+id/shared_icon"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:src="@drawable/paylasim"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="17dp"
            android:gravity="center_vertical"
            android:textColor="#607D8B"
            android:text="@string/basket_share"
            android:textStyle="bold|italic"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:padding="10dp"
            android:id="@+id/apps"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:src="@drawable/appsicon"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="17dp"
            android:gravity="center_vertical"
            android:textColor="#607D8B"
            android:text="@string/app_share"
            android:textStyle="bold|italic"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">
        <TextView
            android:padding="50dp"
            android:layout_marginTop="-50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/information"
            android:gravity="center"
            android:textSize="13dp"
            android:textColor="#000"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/by"
            android:textColor="#000"
           />
    </LinearLayout>
</LinearLayout>