<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:textSize="13dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:text="@string/total_price"
            android:textColor="#000"/>

        <TextView
            android:textSize="13dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:id="@+id/total_price"
            android:textColor="#000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/plustext"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/plus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/addItem2"
                android:textColor="#000"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:id="@+id/cleanLayout"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            >
                <ImageView
                    android:id="@+id/imageId"
                    android:layout_width="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/clear"
                    />

                <TextView
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/clear"
                    android:textColor="#000"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>